[CHG] Modified costs data

--- a/GenerationExpansion.ipynb
+++ b/GenerationExpansion.ipynb
@@ -507,7 +507,7 @@
     }
    ],
    "source": [
-    "FirstExpansionModel = Model(Gurobi.Optimizer)\n",
+    "FirstExpansionModel = Model(HiGHS.Optimizer)\n",
     "@variables(FirstExpansionModel,begin\n",
     "    CAP[g in G] >= 0\n",
     "    GEN[g in G, h in H] >= 0\n",
