[ADD] European Tx

--- a/GenerationExpansion.ipynb
+++ b/GenerationExpansion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,30 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `Dates` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `Dates` not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\nacho\\Desktop\\Imperial College\\Spring Term\\Power System Planning\\PowerSystemPlanning_CW\\GenerationExpansion.ipynb:7"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "timeseries = CSV.read(\"Data/time_series_60min_singleindex.csv\", DataFrame)\n",
+    "timeseries = CSV.read(\"Data/time_series_60min_singleindex_filtered.csv\", DataFrame)\n",
     "columns = names(timeseries)\n",
-    "to_keep = columns[occursin.(\"GB\",columns) .& occursin.(\"profile\",columns) .& (occursin.(\"wind\",columns) .| occursin.(\"solar\",columns))]\n",
+    "to_keep = columns[(occursin.(\"GB\",columns) .| occursin.(\"ES\",columns)) .& occursin.(\"profile\",columns) .& (occursin.(\"wind\",columns) .| occursin.(\"solar\",columns))]\n",
     "to_keep_ts = vcat(columns[1], to_keep)\n",
     "\n",
     "timeseries = timeseries[!,to_keep_ts]\n",
-    "CSV.write(\"Data/timeseries_uk_erv.csv\", timeseries)\n",
+    "CSV.write(\"Data/timeseries_erv.csv\", timeseries)\n",
     "\n",
     "#We'll create a TMY with the Solar data, Onshore wind data and offshore data\n",
     "timeseries[!,\"timestamp\"] = Dates.DateTime.(timeseries[!,\"utc_timestamp\"],\"yyyy-mm-ddTHH:MM:SSZ\");\n",
@@ -117,44 +104,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `timeseries_dict` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `timeseries_dict` not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\nacho\\Desktop\\Imperial College\\Spring Term\\Power System Planning\\PowerSystemPlanning_CW\\GenerationExpansion.ipynb:1"
-     ]
+     "data": {
+      "text/plain": [
+       "Dict{Any, Any} with 5 entries:\n",
+       "  \"GB_GBN_wind_profile\"          => \u001b[1m50401×7 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"GB_GBN_solar_profile\"         => \u001b[1m50401×7 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"GB_GBN_wind_offshore_profile\" => \u001b[1m50401×7 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"ES_solar_profile\"             => \u001b[1m50401×7 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"GB_GBN_wind_onshore_profile\"  => \u001b[1m50401×7 DataFrame\u001b[0m\u001b[0m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "u = timeseries_dict[\"GB_GBN_solar_profile\"]"
+    "u = timeseries_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `timeseries_dict` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `timeseries_dict` not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\nacho\\Desktop\\Imperial College\\Spring Term\\Power System Planning\\PowerSystemPlanning_CW\\GenerationExpansion.ipynb:2"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "monthly_avg = Dict()\n",
     "for element in timeseries_dict\n",
@@ -195,43 +171,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "KeyError: key \"GB_GBN_solar_profile_years\" not found",
-     "output_type": "error",
-     "traceback": [
-      "KeyError: key \"GB_GBN_solar_profile_years\" not found\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] getindex(h::Dict{Any, Any}, key::String)\n",
-      "   @ Base .\\dict.jl:498\n",
-      " [2] top-level scope\n",
-      "   @ c:\\Users\\nacho\\Desktop\\Imperial College\\Spring Term\\Power System Planning\\PowerSystemPlanning_CW\\GenerationExpansion.ipynb:1"
-     ]
+     "data": {
+      "text/plain": [
+       "12-element Vector{Any}:\n",
+       " [2016, 2017, 2018, 2019, 2020]\n",
+       " [2015, 2016, 2017, 2018, 2019, 2020]\n",
+       " [2015, 2016, 2017, 2018, 2019, 2020]\n",
+       " [2015, 2016, 2017, 2018, 2019, 2020]\n",
+       " [2015, 2016, 2017, 2018, 2019, 2020]\n",
+       " [2015, 2016, 2017, 2018, 2019, 2020]\n",
+       " [2015, 2016, 2017, 2018, 2019, 2020]\n",
+       " [2015, 2016, 2017, 2018, 2019, 2020]\n",
+       " [2015, 2016, 2017, 2018, 2019, 2020]\n",
+       " [2015, 2016, 2017, 2018, 2019]\n",
+       " [2015, 2016, 2017, 2018, 2019]\n",
+       " [2015, 2016, 2017, 2018, 2019]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "monthly_avg[\"GB_GBN_solar_profile_years\"]"
+    "monthly_avg[\"ES_solar_profile_years\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `avg_data` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `avg_data` not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\nacho\\Desktop\\Imperial College\\Spring Term\\Power System Planning\\PowerSystemPlanning_CW\\GenerationExpansion.ipynb:2"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GB_GBN_wind_profile\n",
+      "GB_GBN_solar_profile\n",
+      "GB_GBN_wind_offshore_profile\n",
+      "ES_solar_profile\n",
+      "GB_GBN_wind_onshore_profile\n"
      ]
     }
    ],
@@ -239,6 +221,7 @@
     "TMYS = Dict()\n",
     "for element in avg_data\n",
     "    name, matrix = element\n",
+    "    println(name)\n",
     "    best_value = monthly_avg[name]\n",
     "    df = timeseries_dict[name][!,[name, \"month\", \"year\",\"day\",\"hour\"]]\n",
     "    TMY = DataFrame([[],[],[],[],[]], [name,\"year\",\"month\",\"day\",\"hour\"])\n",
@@ -249,6 +232,9 @@
     "        best_year_index = findall(x->x==min(error...), error)\n",
     "        best_year = years_lookup[k][best_year_index[1]]\n",
     "        best_year_df = df[(df.month.==k) .& (df.year.==best_year),[name,\"year\",\"month\",\"day\",\"hour\"]]\n",
+    "        if (k == 2)\n",
+    "            best_year_df = best_year_df[best_year_df.day.<=28,:]\n",
+    "        end\n",
     "        TMY = vcat(TMY,best_year_df)\n",
     "        push!(best_years,best_year)\n",
     "    end\n",
@@ -262,27 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching innerjoin(; on::Symbol)\n\nClosest candidates are:\n  innerjoin(!Matched::AbstractDataFrame, !Matched::AbstractDataFrame; on, makeunique, validate, renamecols, matchmissing, order)\n   @ DataFrames C:\\Users\\nacho\\.julia\\packages\\DataFrames\\58MUJ\\src\\join\\composer.jl:756\n  innerjoin(!Matched::AbstractDataFrame, !Matched::AbstractDataFrame, !Matched::AbstractDataFrame...; on, makeunique, validate, matchmissing, order)\n   @ DataFrames C:\\Users\\nacho\\.julia\\packages\\DataFrames\\58MUJ\\src\\join\\composer.jl:773\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching innerjoin(; on::Symbol)\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  innerjoin(!Matched::AbstractDataFrame, !Matched::AbstractDataFrame; on, makeunique, validate, renamecols, matchmissing, order)\n",
-      "   @ DataFrames C:\\Users\\nacho\\.julia\\packages\\DataFrames\\58MUJ\\src\\join\\composer.jl:756\n",
-      "  innerjoin(!Matched::AbstractDataFrame, !Matched::AbstractDataFrame, !Matched::AbstractDataFrame...; on, makeunique, validate, matchmissing, order)\n",
-      "   @ DataFrames C:\\Users\\nacho\\.julia\\packages\\DataFrames\\58MUJ\\src\\join\\composer.jl:773\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\nacho\\Desktop\\Imperial College\\Spring Term\\Power System Planning\\PowerSystemPlanning_CW\\GenerationExpansion.ipynb:7"
-     ]
+     "data": {
+      "text/plain": [
+       "\"Data/TMY_uk_erv.csv\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
